--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,50 +1,32 @@
+/* ----- Main Styles Start ----- */
+
+body {
+    background-color: #eee;
+    font-family: 'Playfair Display', serif;
+}
+
+.heading {
+    text-align: center;
+    line-height: 10px;
+}
+
+#main svg,
+#dashboard svg {
+    background-color: white;
+    margin: 10px 10px;
+    padding: 5px 5px;
+}
+
+/* ----- Main Styles End ----- */
+
+/* ----- Footer Start ----- */
+
 footer {
+    width: 100%;
     position: fixed;
     bottom: 0;
-    width: 100%;
-    text-align:center;
-    color: grey;
+    text-align: center;
+    font-size: 11px;
 }
 
-#dashboard{
-    display: block;
-    width: 100%;
-}
-
-#dashboard svg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#main{
-    display: block;
-    width: 100%;
-}
-
-#main svg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.dc-chart .brush rect.extent {
-    fill: #bada55;
-    fill-opacity: .450;
-}
-
-.line {
-    stroke: black;
-    fill: black;
-    opacity: 1;
-}
-
-.axis path,
-.axis line {
-      fill: none;
-      stroke: #000;
-      shape-rendering: crispEdges;
-    }
-    
-.x.axis path {
-      display: none;
-    }
+/* ----- Footer End ----- */
