--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 /* ----- Main Styles Start ----- */
 
 body {
-    background-color: #eee;
+    background-color: #d4d4d4;
     font-family: 'Playfair Display', serif;
     margin: 0;
     padding: 0;
@@ -12,38 +12,56 @@ body {
 .heading {
     text-align: center;
     line-height: 10px;
+    color: white;
 }
 
-.heading h2 {
-    font-weight: 700;
+.heading p {
+    background-color: #919AA1;
+    width: 100%;
+    height: 20px;
+    padding: 5px;
 }
 
 /* ----- Header End ----- */
 
 .menu {
-    background-color: #d4d4d4;
+    background-color: #7A8287;
     width: 300px;
     height: 200px;
     position: fixed;
     top: -5px;
-    left: 5px;
+    left: 10px;
     padding: 5px;
     z-index: 10;
-    box-shadow: 0 0 4px #d4d4d4;
-    border: 3px solid #ffffff;
+    box-shadow: 0 0 4px #7A8287;
+    /*border: 1px solid #7A8287;*/
+    display: grid;
+    grid-template-columns: 82% 18%;
+    grid-template-rows: 25% 25% 25% 10% 10% 5%;
+}
+
+@media (max-width: 800px) {
+    .menu {
+        width: 100%;
+        left: 0;
+        
+    }
 }
 
 /* ----- Reset Button Start ----- */
 
 #reset-btn {
-    background-color: #d4d4d4;
-    border: 2px solid #fff;
+    margin-top: 5px;
+    background-color: #AD8C8B;
+    border: none;
     /*box-shadow: 0px 0px 3px #000;*/
     margin-bottom: 4px;
     z-index: 10;
+    grid-column: 1 / span 2;
+    grid-row: 1;
 }
 #reset-btn:hover{
-    background-color: #eeeeee;
+    background-color: #FA817D;
 }
 
 button:focus {
@@ -55,11 +73,63 @@ button:focus {
     font-weight: 700;
 }
 
-/* ----- Reset Button Start ----- */
-
-
+#disciplineSelector select {
+    background-color: #d4d4d4;
+    border: none;
+    margin-bottom: 4px;
+    z-index: 10;
+    color: white;
+    width: 100%;
+}
 #disciplineSelector {
- 
+    grid-column: 1 / span 2;
+    grid-row: 2;
+    
+}
+
+.row_one {
+    grid-row: 1 !important;
+}
+
+option : hover {
+    background-color: gold;
+}
+/* ----- Close Button Start ----- */
+
+
+#close-btn {
+    background-color: #919AA1;
+    border: 2px solid #7A8287;
+    margin-bottom: 4px;
+    z-index: 10;
+    color: white;
+    position: absolute;
+
+}
+
+.toggle-btn {
+    grid-column: 2;
+    grid-row: 5;
+    
+}
+
+#close-btn:hover {
+    background-color: #eeeeee
+}
+
+#open-btn {
+    display: none;
+    background-color: #919AA1;
+    border: 2px solid #7A8287;
+    margin-bottom: 0px;
+    margin-top: 5px;
+    z-index: 10;
+    color: white;
+    position: absolute;
+}
+
+#-btn:hover {
+    background-color: #eeeeee
 }
 
 /* ----- Charts Start ----- */
@@ -70,6 +140,16 @@ button:focus {
     height: 100%;
     width: 100%;
     z-index: -10;
+    background-color: white;
+}
+#linegraph {
+    background-color: white;
+    width: 100%;
+}
+#piechart {
+    background-color: white;
+    width: 100%;
+    padding: 15px;
 }
 
 #stackedchart svg,
@@ -84,13 +164,21 @@ button:focus {
 /* ----- Chart Description Start ----- */
 
 .graph-para {
-    background-color: white;
+    background-color: #919AA1;
     margin: 10px 10px;
     padding: 5px 5px;
 }
 
 .graph-para h2 {
     text-align: center;
+    color: white;
+}
+
+.graph-para p {
+    text-align: justify;
+    color: white;
+    font-size: 14px;
+    padding: 0px 10px;
 }
 
 /* ----- Chart Description End ----- */
@@ -105,6 +193,7 @@ footer {
     bottom: 0;
     text-align: center;
     font-size: 11px;
+    padding-top: 12px;
 }
 
 /* ----- Footer End ----- */
