--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 /* ----- Main Styles Start ----- */
-
 body {
     background-color: #d4d4d4;
     font-family: 'Playfair Display', serif;
@@ -8,25 +7,24 @@ body {
 }
 
 /* ----- Header Start ----- */
-
 .heading {
     text-align: center;
     line-height: 10px;
     color: white;
 }
-
 .heading p {
     background-color: #919AA1;
     width: 100%;
     height: 20px;
     padding: 5px;
 }
-
 /* ----- Header End ----- */
 
+
+/* ----- Menu Start ----- */
 .menu {
     background-color: #7A8287;
-    width: 300px;
+    width: 250px;
     height: 200px;
     position: fixed;
     top: -5px;
@@ -39,7 +37,6 @@ body {
     grid-template-columns: 82% 18%;
     grid-template-rows: 25% 25% 25% 10% 10% 5%;
 }
-
 @media (max-width: 800px) {
     .menu {
         width: 100%;
@@ -47,8 +44,6 @@ body {
         
     }
 }
-
-/* ----- Reset Button Start ----- */
 
 #reset-btn {
     margin-top: 5px;
@@ -62,10 +57,6 @@ body {
 }
 #reset-btn:hover{
     background-color: #FA817D;
-}
-
-button:focus {
-    outline: 1px solid gold;
 }
 #reset-a {
     text-decoration: none;
@@ -87,15 +78,15 @@ button:focus {
     
 }
 
+.toggle-btn {
+    grid-column: 1 / span 2 ;
+    grid-row: 5;
+    width: 100%;
+    
+}
 .row_one {
     grid-row: 1 !important;
 }
-
-option : hover {
-    background-color: gold;
-}
-/* ----- Close Button Start ----- */
-
 
 #close-btn {
     background-color: #919AA1;
@@ -106,13 +97,6 @@ option : hover {
     position: absolute;
 
 }
-
-.toggle-btn {
-    grid-column: 2;
-    grid-row: 5;
-    
-}
-
 #close-btn:hover {
     background-color: #eeeeee
 }
@@ -127,66 +111,71 @@ option : hover {
     color: white;
     position: absolute;
 }
-
-#-btn:hover {
+#open-btn:hover {
     background-color: #eeeeee
 }
+/* ----- Menu End ----- */
+
 
 /* ----- Charts Start ----- */
-
 #stackedchart {
     display: block;
     margin-left: auto;
     height: 100%;
-    width: 100%;
+ 
     z-index: -10;
     background-color: white;
 }
 #linegraph {
+    display: block;
+    margin-left: auto;
+    height: 100%;
+   
+    z-index: -10;
     background-color: white;
-    width: 100%;
 }
 #piechart {
+    display: block;
+    margin-left: auto;
+
+   
+    z-index: -10;
     background-color: white;
-    width: 100%;
-    padding: 15px;
 }
 
 #stackedchart svg,
-#linegraph svg {
+#linegraph svg,
+#piechart svg{
     background-color: white;
     margin: 10px 10px;
     padding: 5px 5px;
 }
-
 /* ----- Charts End ----- */
 
-/* ----- Chart Description Start ----- */
 
+/* ----- Chart Description Start ----- */
 .graph-para {
     background-color: #919AA1;
     margin: 10px 10px;
     padding: 5px 5px;
 }
-
 .graph-para h2 {
     text-align: center;
     color: white;
 }
-
 .graph-para p {
     text-align: justify;
     color: white;
     font-size: 14px;
     padding: 0px 10px;
 }
-
 /* ----- Chart Description End ----- */
+
 
 /* ----- Main Styles End ----- */
 
-/* ----- Footer Start ----- */
 
+/* ----- Footer Start ----- */
 footer {
     width: 100%;
     position: fixed;
@@ -195,5 +184,4 @@ footer {
     font-size: 11px;
     padding-top: 12px;
 }
-
 /* ----- Footer End ----- */
