--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /* ----- Main Styles Start ----- */
 body {
-    background-color: #d4d4d4;
+    background-color: #fff;
     font-family: 'Playfair Display', serif;
     margin: 0;
     padding: 0;
@@ -10,10 +10,12 @@ body {
 .heading {
     text-align: center;
     line-height: 10px;
-    color: white;
+    color: #919AA1;
+    background-color: #ffffff;
+    border: solid 2px #919AA1;
+    border-top-color: #fff;
 }
 .heading p {
-    background-color: #919AA1;
     width: 100%;
     height: 20px;
     padding: 5px;
@@ -23,7 +25,7 @@ body {
 
 /* ----- Menu Start ----- */
 .menu {
-    background-color: #7A8287;
+    background-color: #ffffff;
     width: 250px;
     height: 200px;
     position: fixed;
@@ -31,12 +33,12 @@ body {
     left: 10px;
     padding: 5px;
     z-index: 10;
-    box-shadow: 0 0 4px #7A8287;
-    /*border: 1px solid #7A8287;*/
+    border: solid 2px #919AA1;
     display: grid;
     grid-template-columns: 82% 18%;
     grid-template-rows: 25% 25% 25% 10% 10% 5%;
 }
+
 @media (max-width: 800px) {
     .menu {
         width: 100%;
@@ -65,11 +67,12 @@ body {
 }
 
 #disciplineSelector select {
-    background-color: #d4d4d4;
+    background-color: #ffffff;
     border: none;
     margin-bottom: 4px;
     z-index: 10;
-    color: white;
+    color: #919AA2;
+    border: solid 2px #919AA1;
     width: 100%;
 }
 #disciplineSelector {
@@ -81,7 +84,6 @@ body {
 .toggle-btn {
     grid-column: 1 / span 2 ;
     grid-row: 5;
-    width: 100%;
     
 }
 .row_one {
@@ -89,11 +91,11 @@ body {
 }
 
 #close-btn {
-    background-color: #919AA1;
+    background-color: #fff;
     border: 2px solid #7A8287;
     margin-bottom: 4px;
     z-index: 10;
-    color: white;
+    color: #919AA1;
     position: absolute;
 
 }
@@ -103,34 +105,36 @@ body {
 
 #open-btn {
     display: none;
-    background-color: #919AA1;
-    border: 2px solid #7A8287;
-    margin-bottom: 0px;
-    margin-top: 5px;
+    background-color: #ffffff;
+    margin-top: 2.5px;
+    border: none;
     z-index: 10;
-    color: white;
+    color: #919AA2;
     position: absolute;
-}
-#open-btn:hover {
-    background-color: #eeeeee
+    width: 92%
 }
 /* ----- Menu End ----- */
+
+
+li {
+    list-style-type: circle;
+}
 
 
 /* ----- Charts Start ----- */
 #stackedchart {
     display: block;
     margin-left: auto;
-    height: 100%;
- 
+    height: auto;
     z-index: -10;
     background-color: white;
+    margin-bottom: 10px;
 }
 #linegraph {
     display: block;
     margin-left: auto;
-    height: 100%;
-   
+    height: auto;
+    margin-bottom: 10px;
     z-index: -10;
     background-color: white;
 }
@@ -142,10 +146,20 @@ body {
     z-index: -10;
     background-color: white;
 }
+#piechart-1 {
+    display: block;
+    margin-left: auto;
+
+   
+    z-index: -10;
+    background-color: white;
+}
+
 
 #stackedchart svg,
 #linegraph svg,
-#piechart svg{
+#piechart svg,
+#piechart-1 svg{
     background-color: white;
     margin: 10px 10px;
     padding: 5px 5px;
@@ -155,17 +169,18 @@ body {
 
 /* ----- Chart Description Start ----- */
 .graph-para {
-    background-color: #919AA1;
+    background-color: #fff;
+    border: solid 2px #919AA1;
     margin: 10px 10px;
     padding: 5px 5px;
 }
 .graph-para h2 {
     text-align: center;
-    color: white;
+    color: #919AA1;
 }
 .graph-para p {
     text-align: justify;
-    color: white;
+    color: #919AA1;
     font-size: 14px;
     padding: 0px 10px;
 }
@@ -183,5 +198,12 @@ footer {
     text-align: center;
     font-size: 11px;
     padding-top: 12px;
+}
+
+@media (max-width: 728px) {
+    footer {
+        position: relative;
+        padding: 0 15px;
+    }
 }
 /* ----- Footer End ----- */
