--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,10 @@ body {
 @media(max-width: 800px){
     body{
         margin-top: 45px;
+        background-color: white;
+    }
+    .main {
+        width: 100%;
     }
 }
 
@@ -57,6 +61,11 @@ body {
         left: 0;
         border-left: none;
         border-right: none;
+        background-color: rgb(57, 59, 121);
+    }
+
+    button#open-btn {
+        color: white;
     }
 }
 
@@ -129,7 +138,7 @@ body {
     z-index: 10;
     color: #000000;
     position: absolute;
-    width: 92%
+    width: 92%;
 }
 /* ----- Menu End ----- */
 
@@ -219,5 +228,11 @@ footer {
     font-size: 12px;
     margin-top: 25px;
     color: white;
+}
+
+@media (max-width: 800px) {
+    footer{
+        color: rgb(57, 59, 121);
+    }
 }
 /* ----- Footer End ----- */
