--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,21 +40,21 @@ body {
 }
 /* ----- Header End ----- */
 
-
 /* ----- Menu Start ----- */
 .menu {
-    background-color: #ffffff;
+    background-color: rgb(57,59,121);
     width: 250px;
-    height: 250px;
+    height: 150px;
     position: fixed;
     top: -5px;
-    left: 10px;
+    left: 11%;
     padding: 5px;
     z-index: 10;
-    border: solid 2px rgb(57, 59, 121);
+    /*border: solid 2px rgb(57, 59, 121);*/
     display: grid;
     grid-template-columns: 82% 18%;
-    grid-template-rows: 25% 25% 25% 10% 10% 5%;
+    grid-template-rows: 50px 27.5px 27.5px 47.5px;
+    border-radius: 4px;
 }
 
 @media (max-width: 992px) {
@@ -63,6 +63,7 @@ body {
         left: 0;
         border: none;
         background-color: rgb(57, 59, 121);
+        border-radius: 0;
     }
 
     button#open-btn,
@@ -112,7 +113,7 @@ body {
 
 .toggle-btn {
     grid-column: 1 / span 2 ;
-    grid-row: 5;
+    grid-row: 4;
     
 }
 .row_one {
@@ -129,11 +130,10 @@ body {
     margin: 0;
     border: none;
     background-color: transparent;
-    color: rgb(57, 59, 121);
+    color: white;
     position: absolute;
     font-size: 30px;
 }
-
 #open-btn {
     display: none;
     background-color: transparent;
@@ -146,13 +146,9 @@ body {
     font-size: 30px;
 }
 /* ----- Menu End ----- */
-
-
 li {
     list-style-type: circle;
 }
-
-
 /* ----- Charts Start ----- */
 #stackedchart {
     display: block;
@@ -202,13 +198,15 @@ li {
 .graph-para {
     background-color: #fff;
     border: solid 2px #cedb9c;
+    border-radius: 4px;
     padding: 5px 5px;
 }
-.graph-para h2, h3 {
+.graph-para h2{
     text-align: center;
     color: rgb(57, 59, 121);
 }
 .graph-para h3 {
+    text-align: center;
     color: #cedb9c;
 }
 .graph-para p {
